feat: add 4 packages

--- a/package.json
+++ b/package.json
@@ -1,145 +1,28 @@
 {
-  "name": "zilev-docker-pack",
+  "name": "vs-code-extension-docker-pack",
   "displayName": "Zilev Docker Pack",
   "description": "Conjunto de extensiones para desarrollo en docker en vs code",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "engines": {
     "vscode": "^1.74.0"
+  },
+  "repository": {
+    "url": "https://github.com/zilev-devops/vs-code-extension-docker-pack.git",
+    "type": "vscode"
+  },
+  "publisher": "zilev",
+  "icon": "docker.png",
+  "galleryBanner": {
+    "color": "#399e64",
+    "theme": "dark"
   },
   "categories": [
     "Extension Packs"
   ],
-  "extensionPack": [ 
-    "1tontech.angular-material", 
-    "aaron-bond.better-comments", 
-    "adpyke.codesnap", 
-    "afractal.node-essentials", 
-    "alefragnani.Bookmarks", 
-    "alefragnani.project-manager", 
-    "alexiv.vscode-angular2-files", 
-    "Angular.ng-template", 
-    "Atishay-Jain.All-Autocomplete", 
-    "be5invis.vscode-icontheme-nomo-dark", 
-    "ChakrounAnas.turbo-console-log", 
-    "christian-kohler.path-intellisense", 
-    "chrmarti.regex", 
-    "cipchk.ng-alain-extension-pack", 
-    "cipchk.ng-alain-vscode", 
-    "cipchk.ng-zorro-vscode", 
-    "CodeStream.codestream", 
-    "codezombiech.gitignore", 
-    "ctf0.macros", 
-    "cyrilletuzi.angular-schematics", 
-    "dbaeumer.vscode-eslint", 
-    "donjayamanne.git-extension-pack", 
-    "donjayamanne.githistory", 
-    "eamodio.gitlens", 
-    "EditorConfig.EditorConfig", 
-    "enkia.tokyo-night", 
-    "esbenp.prettier-vscode", 
-    "evondev.indent-rainbow-palettes", 
-    "fabiospampinato.vscode-monokai-night", 
-    "flyfly6.terminal-in-status-bar", 
-    "formulahendry.auto-close-tag", 
-    "formulahendry.auto-rename-tag", 
-    "formulahendry.code-runner", 
-    "formulahendry.docker-explorer", 
-    "GitHub.vscode-pull-request-github", 
-    "Gruntfuggly.todo-tree", 
-    "henriiik.docker-linter", 
-    "hoovercj.vscode-settings-cycler", 
-    "IBM.output-colorizer", 
-    "infinity1207.angular2-switcher", 
-    "inu1255.easy-snippet", 
-    "iocave.customize-ui", 
-    "iocave.monkey-patch", 
-    "jabacchetta.vscode-essentials", 
-    "jakearl.search-editor-apply-changes", 
-    "jasonlhy.hungry-delete", 
-    "jkjustjoshing.vscode-text-pastry", 
-    "john-crowson.angular-file-changer", 
-    "johnpapa.Angular2", 
-    "johnpapa.vscode-peacock", 
-    "kamikillerto.vscode-colorize", 
-    "karigari.chat", 
-    "lacroixdavid1.vscode-format-context-menu", 
-    "loiane.angular-extension-pack", 
-    "lostintangent.vsls-whiteboard", 
-    "magnobiet.docker-extension-pack", 
-    "metaseed.metago", 
-    "metaseed.MetaJump", 
-    "metaseed.MetaWord", 
-    "mhutchie.git-graph", 
-    "micnil.vscode-checkpoints", 
-    "mikestead.dotenv", 
-    "mitchdenny.ecdc", 
-    "ms-azuretools.vscode-docker", 
-    "MS-CEINTL.vscode-language-pack-es", 
-    "ms-kubernetes-tools.vscode-kubernetes-tools", 
-    "ms-mssql.sql-bindings-vscode", 
-    "ms-python.isort", 
-    "ms-python.python", 
-    "ms-python.vscode-pylance", 
-    "ms-toolsai.jupyter", 
-    "ms-toolsai.jupyter-keymap", 
-    "ms-toolsai.jupyter-renderers", 
-    "ms-toolsai.vscode-jupyter-cell-tags", 
-    "ms-toolsai.vscode-jupyter-slideshow", 
-    "ms-vscode-remote.remote-containers", 
-    "ms-vscode-remote.remote-ssh", 
-    "ms-vscode-remote.remote-ssh-edit", 
-    "ms-vscode-remote.remote-wsl", 
-    "ms-vscode-remote.vscode-remote-extensionpack", 
-    "ms-vscode.remote-explorer", 
-    "ms-vscode.vscode-typescript-tslint-plugin", 
-    "ms-vsliveshare.vsliveshare", 
-    "ms-vsliveshare.vsliveshare-audio", 
-    "msjsdiag.debugger-for-chrome", 
-    "nhoizey.gremlins", 
-    "obenjiro.arrr", 
-    "oderwat.indent-rainbow", 
-    "Orta.vscode-jest", 
-    "p1c2u.docker-compose", 
-    "PeterSchmalfeldt.explorer-exclude", 
-    "PKief.material-product-icons", 
-    "pnp.polacode", 
-    "quicktype.quicktype", 
-    "rangav.vscode-thunder-client", 
-    "rbbit.typescript-hero", 
-    "rctay.karma-problem-matcher", 
-    "redhat.fabric8-analytics", 
-    "redhat.java", 
-    "redhat.vscode-community-server-connector", 
-    "redhat.vscode-yaml", 
-    "ritwickdey.LiveServer", 
-    "royaction.color-manager", 
-    "segerdekort.angular-cli", 
-    "Serhioromano.vscode-gitflow", 
-    "shardulm94.trailing-spaces", 
-    "SimonTest.simontest", 
-    "slevesque.vscode-multiclip", 
-    "steoates.autoimport", 
-    "stkb.rewrap", 
-    "streetsidesoftware.code-spell-checker", 
-    "streetsidesoftware.code-spell-checker-spanish", 
-    "stringham.move-ts", 
-    "svipas.control-snippets", 
-    "TabNine.tabnine-vscode", 
-    "tomoki1207.pdf", 
-    "VisualStudioExptTeam.intellicode-api-usage-examples", 
-    "VisualStudioExptTeam.vscodeintellicode", 
-    "vscjava.vscode-java-debug", 
-    "vscjava.vscode-java-dependency", 
-    "vscjava.vscode-java-pack", 
-    "vscjava.vscode-java-test", 
-    "vscjava.vscode-maven", 
-    "vsls-contrib.gistfs", 
-    "WakaTime.vscode-wakatime", 
-    "WallabyJs.quokka-vscode", 
-    "wix.vscode-import-cost", 
-    "xyz.local-history", 
-    "yigitfindikli.primeflexsnippets", 
-    "yigitfindikli.primengsnippets", 
-    "ziyasal.vscode-open-in-github"
+  "extensionPack": [
+    "formulahendry.docker-explorer",
+    "henriiik.docker-linter",
+    "ms-azuretools.vscode-docker",
+    "p1c2u.docker-compose"
   ]
 }
